tests222/tests/test62.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: byte value 4278 out of range
^
